kubernetes/backend/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-app-service
spec:
  type: ClusterIP
  ports:
    - port: 5000
  selector:
    app: django-app
